@@ -1,4 +1,7 @@
 $Rev$
+[2008/03/01]
+mLineending.py      Fix copy and paste lineending is not correct bug
+
 [2008/02/16]
 Editor.py mEditor.py FlatNotebook.py mInputAssistant.py
                     Fix smart tabs bug.
